# todo-app

./: README.md  pyproject.toml
todo/: main.py
todo/server/: __init__.py  app.py  database.py
todo/server/models/: __init__.py  todoitem.py  todolist.py
todo/server/routes/: __init__.py  todo.py
